Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -180,21 +180,21 @@ When you’re around, everything feels calmer.
 
 <div class="gallery">
 
-<div class="card"><img src="photos/photo1.jpg"><div class="caption">Grace looks effortless on you.</div></div>
-<div class="card"><img src="photos/photo2.jpg"><div class="caption">Even your simplest moments feel special.</div></div>
-<div class="card"><img src="photos/photo3.jpg"><div class="caption">If I could pause time, I would keep this forever.</div></div>
-<div class="card"><img src="photos/photo4.jpg"><div class="caption">One wink and my world forgets how to stay calm.</div></div>
-<div class="card"><img src="photos/photo5.jpg"><div class="caption">You look like poetry in golden light.</div></div>
-<div class="card"><img src="photos/photo6.jpg"><div class="caption">Under open skies, you still shine brighter.</div></div>
-<div class="card"><img src="photos/photo7.jpg"><div class="caption">You quietly own every place you walk into.</div></div>
-<div class="card"><img src="photos/photo8.jpg"><div class="caption">The kind of beauty that just exists.</div></div>
-<div class="card"><img src="photos/photo9.jpg"><div class="caption">Playful, soft, and dangerously pretty.</div></div>
-<div class="card"><img src="photos/photo10.jpg"><div class="caption">Even flowers look lucky beside you.</div></div>
-<div class="card"><img src="photos/photo11.jpg"><div class="caption">Softness has your face.</div></div>
-<div class="card"><img src="photos/photo12.jpg"><div class="caption">Strong gaze. Calm presence.</div></div>
-<div class="card"><img src="photos/photo13.jpg"><div class="caption">Effortlessly beautiful.</div></div>
-<div class="card"><img src="photos/photo14.jpg"><div class="caption">You make moments unforgettable.</div></div>
-<div class="card"><img src="photos/photo15.jpg"><div class="caption">Golden light found the right person.</div></div>
+<div class="card"><img src="Photos/photo1.jpg"><div class="caption">Grace looks effortless on you.</div></div>
+<div class="card"><img src="Photos/photo2.jpg"><div class="caption">Even your simplest moments feel special.</div></div>
+<div class="card"><img src="Photos/photo3.jpg"><div class="caption">If I could pause time, I would keep this forever.</div></div>
+<div class="card"><img src="Photos/photo4.jpg"><div class="caption">One wink and my world forgets how to stay calm.</div></div>
+<div class="card"><img src="Photos/photo5.jpg"><div class="caption">You look like poetry in golden light.</div></div>
+<div class="card"><img src="Photos/photo6.jpg"><div class="caption">Under open skies, you still shine brighter.</div></div>
+<div class="card"><img src="Photos/photo7.jpg"><div class="caption">You quietly own every place you walk into.</div></div>
+<div class="card"><img src="Photos/photo8.jpg"><div class="caption">The kind of beauty that just exists.</div></div>
+<div class="card"><img src="Photos/photo9.jpg"><div class="caption">Playful, soft, and dangerously pretty.</div></div>
+<div class="card"><img src="Photos/photo10.jpg"><div class="caption">Even flowers look lucky beside you.</div></div>
+<div class="card"><img src="Photos/photo11.jpg"><div class="caption">Softness has your face.</div></div>
+<div class="card"><img src="Photos/photo12.jpg"><div class="caption">Strong gaze. Calm presence.</div></div>
+<div class="card"><img src="Photos/photo13.jpg"><div class="caption">Effortlessly beautiful.</div></div>
+<div class="card"><img src="Photos/photo14.jpg"><div class="caption">You make moments unforgettable.</div></div>
+<div class="card"><img src="Photos/photo15.jpg"><div class="caption">Golden light found the right person.</div></div>
 
 </div>
 </div>
@@ -231,3 +231,4 @@ document.getElementById("letterModal").style.display="none";
 
 </body>
 </html>
+
